ready for publish

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -6,7 +6,12 @@ html
     link(rel='stylesheet', href='/stylesheets/mui-github-markdown.css')
     link(rel='stylesheet', href='/stylesheets/prop-type-description.css')
     link(rel='stylesheet', href='/stylesheets/custom.css')
-    link(rel='stylesheet', href='/stylesheets/style.css')
+    //- link(rel='stylesheet', href='/stylesheets/style.css')
     script(src='/build/common.js')
+
+    style.
+      .propTypeDescription table th:first-child {
+        width: 150px;
+      }
   body
     block content
