--- a/views/manage.jade
+++ b/views/manage.jade
@@ -5,5 +5,6 @@ block content
 
   script.
     window.store = !{store};
+    window.authenticated = !{authenticated}
 
   script(src='/build/main.js')
