support smart devices

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,6 +2,7 @@ doctype html
 html
   head
     title= title
+    meta(name='viewport', content='width=device-width, initial-scale=1')
     link(rel='stylesheet', href='/stylesheets/flexboxgrid.min.css')
     link(rel='stylesheet', href='/stylesheets/mui-github-markdown.css')
     link(rel='stylesheet', href='/stylesheets/prop-type-description.css')
