add internal install

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -8,6 +8,7 @@ html
     link(rel='stylesheet', href='/stylesheets/prop-type-description.css')
     link(rel='stylesheet', href='/stylesheets/custom.css')
     //- link(rel='stylesheet', href='/stylesheets/style.css')
+    link(rel='chrome-webstore-item', href='https://chrome.google.com/webstore/detail/ghnfiadioahomhmocmhgjhpmhcmcggjg')
     script(src='/build/common.js')
 
     style.
