--- a/views/headless.jade
+++ b/views/headless.jade
@@ -19,6 +19,13 @@ html
       .propTypeDescription table th:first-child {
         width: 150px;
       }
+      .footnote{
+        text-align: right;
+        color: darkgray;
+        font-family: "noto sans" !important;
+        font-size: 12px;
+        margin-top: 5px;
+      }
   body
     block content
       #react-container
